# apps/drive-api/openapi.json
@@ -1937,9 +1937,7 @@
           "session_id",
           "checkout_id",
           "url",
-          "provider_customer_id",
-          "stripe_customer_id",
-          "stripe_price_id"
+          "provider_customer_id"
         ],
         "properties": {
           "checkout_id": {
@@ -1973,10 +1971,16 @@
             "type": "string"
           },
           "stripe_customer_id": {
-            "type": "string"
+            "type": [
+              "string",
+              "null"
+            ]
           },
           "stripe_price_id": {
-            "type": "string"
+            "type": [
+              "string",
+              "null"
+            ]
           },
           "url": {
             "type": "string"
@@ -2358,8 +2362,7 @@
         "required": [
           "provider",
           "url",
-          "provider_customer_id",
-          "stripe_customer_id"
+          "provider_customer_id"
         ],
         "properties": {
           "provider": {
@@ -2369,7 +2372,10 @@
             "type": "string"
           },
           "stripe_customer_id": {
-            "type": "string"
+            "type": [
+              "string",
+              "null"
+            ]
           },
           "url": {
             "type": "string"
